General Bugfixes, Fixed logo spacing for playlists

--- a/frontend/music.css
+++ b/frontend/music.css
@@ -51,7 +51,7 @@
 }
 
 #music-content #card-container{
-    margin-top: 9em;
+    margin-top: 4em;
 }
 
 .music-title {
@@ -72,5 +72,5 @@
     object-position: center;
     aspect-ratio: 2362/709;
     width: 150px;
-    margin-bottom: 1em;
+    margin-top: 2em;
 }
